# vulkan-learn

./: CMakeLists.txt  compile-shaders.sh  delq.h  diary.md  main.cpp  shader.frag  shader.vert  skull.mtl  trueno.mtl  vcpkg.json  vertex.cpp  vertex.h  vkinit.cpp  vkinit.h
shaders/: frag.spv  vert.spv
